# compliance-tracker

./: package.json  vite.config.ts  wrangler.jsonc
electron/: README.md  main.cjs
src/: routeTree.gen.ts  styles.css
src-tauri/: Cargo.toml  README.md  tauri.conf.json
src/components/: AppShell.tsx  ColumnSettings.tsx
src/lib/: export-utils.ts  pwa-register.ts  violations-store.ts
src/routes/: __root.tsx  index.tsx  inputs.tsx  records.tsx  violations.tsx
src/types/: pwa.d.ts
