[package]
name = "gamasa-violations"
version = "0.1.0"
description = "نظام مخالفات جمصة"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bin]]
name = "gamasa-violations"
path = "src/main.rs"
